--- a/west.yml
+++ b/west.yml
@@ -12,5 +12,5 @@ manifest:
   projects:
     - name: zephyr
       remote: zephyrproject-rtos
-      revision: v2.7-branch
+      revision: v2.7.1
       import: true
