Enhance VS Code integration

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "editorconfig.editorconfig",
         "humao.rest-client",
         "ms-vscode.cpptools",
+        "actboy168.tasks"
         // "marus25.cortex-debug"
     ],
     "unwantedRecommendations": [
