--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,28 @@
 CONFIG_PRINTK=y
+
+###############################################################################
+
 CONFIG_QEMU_ICOUNT=n
+
+
+
+CONFIG_MINIMAL_LIBC=y
+CONFIG_MINIMAL_LIBC_MALLOC=y
+CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=1024
+
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.10.1"
+
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=5
+CONFIG_DNS_RESOLVER_ADDITIONAL_QUERIES=2
+CONFIG_DNS_RESOLVER_AI_MAX_ENTRIES=4
+
+CONFIG_DNS_RESOLVER_MAX_SERVERS=2
+# https://docs.zephyrproject.org/latest/reference/kconfig/CONFIG_DNS_SERVER1.html#std-kconfig-CONFIG_DNS_SERVER1
+CONFIG_DNS_SERVER1="192.168.10.6"
+CONFIG_DNS_SERVER1="8.8.8.8"
+
+CONFIG_DNS_RESOLVER_LOG_LEVEL_DBG=y
 
 ###############################################################################
 
@@ -21,8 +44,10 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_INIT_STACKS=y
 
 # Logging
-CONFIG_NET_LOG=y
 CONFIG_LOG=y
+CONFIG_NET_LOG=y
+CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=y
+
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_NET_STATISTICS=y
 
