--- a/prj.conf
+++ b/prj.conf
@@ -4,11 +4,14 @@ CONFIG_PRINTK=y
 
 CONFIG_QEMU_ICOUNT=n
 
+###############################################################################
 
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_MIN_REQUIRED_HEAP_SIZE=2048
 
-CONFIG_MINIMAL_LIBC=y
-CONFIG_MINIMAL_LIBC_MALLOC=y
-CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=1024
+# CONFIG_MINIMAL_LIBC=y
+# CONFIG_MINIMAL_LIBC_MALLOC=y
+# CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=1024
 
 CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 
@@ -36,12 +39,13 @@ CONFIG_NET_TCP=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_POSIX_MAX_FDS=6
 CONFIG_NET_CONNECTION_MANAGER=y
 
 # Kernel options
-CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_INIT_STACKS=y
@@ -55,8 +59,8 @@ CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_NET_STATISTICS=y
 
 # Network buffers
-CONFIG_NET_PKT_RX_COUNT=16
-CONFIG_NET_PKT_TX_COUNT=16
+CONFIG_NET_PKT_RX_COUNT=32
+CONFIG_NET_PKT_TX_COUNT=32
 CONFIG_NET_BUF_RX_COUNT=64
 CONFIG_NET_BUF_TX_COUNT=64
 CONFIG_NET_CONTEXT_NET_PKT_POOL=y
@@ -82,3 +86,33 @@ CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 # Number of socket descriptors might need adjusting
 # if there are more than 1 handlers defined.
 CONFIG_POSIX_MAX_FDS=12
+
+###############################################################################
+
+# Enable Mbed TLS configuration
+CONFIG_MBEDTLS=y
+CONFIG_MBEDTLS_BUILTIN=y
+CONFIG_MBEDTLS_ENABLE_HEAP=y
+CONFIG_MBEDTLS_HEAP_SIZE=65536
+CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=10240
+CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
+CONFIG_MBEDTLS_USER_CONFIG_ENABLE=y
+CONFIG_MBEDTLS_USER_CONFIG_FILE="user-tls.conf"
+
+CONFIG_MBEDTLS_TLS_VERSION_1_2=y
+CONFIG_MBEDTLS_TLS_VERSION_1_1=n
+CONFIG_MBEDTLS_TLS_VERSION_1_0=n
+
+CONFIG_MBEDTLS_DEBUG=y
+CONFIG_MBEDTLS_DEBUG_LEVEL=1
+
+###############################################################################
+
+CONFIG_SNTP=y
+
+###############################################################################
+
+CONFIG_MQTT_LIB=y
+CONFIG_MQTT_LIB_TLS=y
+
+###############################################################################
