--- a/prj.conf
+++ b/prj.conf
@@ -1,3 +1,7 @@
+CONFIG_CLOUD_AWS_HOSTNAME="a31gokdeokxhl8-ats.iot.us-east-1.amazonaws.com"
+
+###############################################################################
+
 CONFIG_PRINTK=y
 
 ###############################################################################
@@ -6,12 +10,14 @@ CONFIG_QEMU_ICOUNT=n
 
 ###############################################################################
 
-CONFIG_NEWLIB_LIBC=y
-CONFIG_NEWLIB_LIBC_MIN_REQUIRED_HEAP_SIZE=2048
+# CONFIG_NEWLIB_LIBC=y
+# CONFIG_NEWLIB_LIBC_MIN_REQUIRED_HEAP_SIZE=2048
 
-# CONFIG_MINIMAL_LIBC=y
-# CONFIG_MINIMAL_LIBC_MALLOC=y
-# CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=1024
+CONFIG_POSIX_API=y
+
+CONFIG_MINIMAL_LIBC=y
+CONFIG_MINIMAL_LIBC_MALLOC=y
+CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=2048
 
 CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 
@@ -26,7 +32,7 @@ CONFIG_DNS_SERVER_IP_ADDRESSES=y
 # https://docs.zephyrproject.org/latest/reference/kconfig/CONFIG_DNS_SERVER1.html#std-kconfig-CONFIG_DNS_SERVER1
 CONFIG_DNS_SERVER1="192.168.10.6"
 
-CONFIG_DNS_RESOLVER_LOG_LEVEL_DBG=y
+CONFIG_DNS_RESOLVER_LOG_LEVEL_DBG=n
 
 CONFIG_NET_SOCKETS_DNS_TIMEOUT=5000
 
@@ -53,7 +59,7 @@ CONFIG_INIT_STACKS=y
 # Logging
 CONFIG_LOG=y
 CONFIG_NET_LOG=y
-CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=y
+CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=n
 
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_NET_STATISTICS=y
@@ -116,3 +122,4 @@ CONFIG_MQTT_LIB=y
 CONFIG_MQTT_LIB_TLS=y
 
 ###############################################################################
+
