--- a/prj.conf
+++ b/prj.conf
@@ -1,4 +1,6 @@
 CONFIG_CLOUD_AWS_HOSTNAME="a31gokdeokxhl8-ats.iot.us-east-1.amazonaws.com"
+CONFIG_CLOUD_AWS_PORT=8883
+CONFIG_CLOUD_AWS_DEVICE_NAME="zephyr-qemu-aws-device"
 
 ###############################################################################
 
@@ -109,8 +111,10 @@ CONFIG_MBEDTLS_TLS_VERSION_1_2=y
 CONFIG_MBEDTLS_TLS_VERSION_1_1=n
 CONFIG_MBEDTLS_TLS_VERSION_1_0=n
 
+# enable CONFIG_NET_SOCKETS_LOG_LEVEL_DBG in order to see mbedtls logs
 CONFIG_MBEDTLS_DEBUG=y
 CONFIG_MBEDTLS_DEBUG_LEVEL=1
+CONFIG_MBEDTLS_MEMORY_DEBUG=y
 
 ###############################################################################
 
