--- a/prj.conf
+++ b/prj.conf
@@ -2,6 +2,11 @@ CONFIG_CLOUD_AWS_HOSTNAME="a31gokdeokxhl8-ats.iot.us-east-1.amazonaws.com"
 CONFIG_CLOUD_AWS_PORT=8883
 CONFIG_CLOUD_AWS_DEVICE_NAME="zephyr-qemu-aws-device"
 
+# transport layer is TCP (reliable)
+CONFIG_CLOUD_AWS_QOS=0 
+
+CONFIG_CLOUD_AWS_PAYLOAD_BUFFER_SIZE=124
+
 ###############################################################################
 
 CONFIG_PRINTK=y
@@ -124,6 +129,13 @@ CONFIG_SNTP=y
 
 CONFIG_MQTT_LIB=y
 CONFIG_MQTT_LIB_TLS=y
+CONFIG_MQTT_KEEPALIVE=20
 
 ###############################################################################
 
+CONFIG_EVENTFD=y
+CONFIG_EVENTFD_MAX=1
+
+###############################################################################
+
+CONFIG_JSON_LIBRARY=y
