--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,13 @@
         "socket_select.h": "c",
         "socket_types.h": "c",
         "tp.h": "c",
-        "json.h": "c"
+        "json.h": "c",
+        "mqtt.h": "c",
+        "time.h": "c",
+        "stdio.h": "c",
+        "stdlib.h": "c",
+        "*.cer": "c",
+        "errno.h": "c",
+        "sntp.h": "c"
     }
 }
