--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         "env": {
             "venvPath": "../.venv",
             "westPath": "../.venv/bin/west",
-            "netToolsPath": "../net-tools",
+            "netToolsPath": "../tools/net-tools",
         }
     },
     "tasks": [
@@ -38,7 +38,7 @@
             "group": "build",
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "dedicated"
             },
             "options": {
                 "statusbar": {
@@ -62,8 +62,18 @@
             "type": "shell",
             "command": "sudo ${netToolsPath}/loop-slip-tap.sh",
             "presentation": {
-                "reveal": "silent",
+                "reveal": "always",
                 "panel": "dedicated",
+                "focus": true
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "(QEMU) iptable MASQUERADE (SUDO)",
+            "type": "shell",
+            "command": "sudo iptables -t nat -A POSTROUTING -j MASQUERADE -s 192.0.2.1 && sudo sysctl -w net.ipv4.ip_forward=1",
+            "presentation": {
+                "echo": false,
                 "focus": true
             },
             "problemMatcher": []
@@ -92,14 +102,36 @@
             "problemMatcher": []
         },
         {
-            "label": "clean",
+            "label": "Clean",
             "type": "shell",
 			"command": "rm -rf ${workspaceFolder}/build",
             "group": "build",
             "args": [
             ],
+            "options": {
+                "statusbar": {
+                    "hide": false
+                }
+            },
             "presentation": {
                 "echo": false,
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "gencertsh.py",
+            "type": "shell",
+			"command": "python3 ./scripts/gencertsh.py",
+            "group": "build",
+            "args": [
+            ],
+            "options": {
+                "cwd": "${workspaceRoot}"
+            },
+            "presentation": {
+                "reveal": "silent",
+                "panel": "shared",
+                "focus": false,
             },
             "problemMatcher": []
         },
@@ -132,23 +164,6 @@
                 "close": false,
                 "focus": true,
                 "echo": true
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "... TODO",
-            "type": "shell",
-            "command": "west build -t run",
-            "group": "build",
-            "options": {
-                "cwd": "${workspaceRoot}/build"
-            },
-            "windows": {
-                "command": "${workspaceFolder}\\scripts\\readelf-vs.bat"
-            },
-            "presentation": {
-                "reveal": "always",
-                "panel": "new"
             },
             "problemMatcher": []
         }
