--- a/prj.conf
+++ b/prj.conf
@@ -1,10 +1,3 @@
-CONFIG_CLOUD_AWS_HOSTNAME="a31gokdeokxhl8-ats.iot.us-east-1.amazonaws.com"
-CONFIG_CLOUD_AWS_PORT=8883
-CONFIG_CLOUD_AWS_DEVICE_NAME="zephyr-qemu-aws-device"
-CONFIG_CLOUD_AWS_QOS=0 
-
-CONFIG_CLOUD_AWS_PAYLOAD_BUFFER_SIZE=124
-
 ###############################################################################
 
 CONFIG_PRINTK=y
@@ -50,7 +43,7 @@ CONFIG_NET_TCP=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_SOCKETS=y
-CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=n
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_POSIX_MAX_FDS=6
 CONFIG_NET_CONNECTION_MANAGER=y
@@ -82,8 +75,8 @@ CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=4
 CONFIG_NET_MAX_CONTEXTS=10
 
 # Network shell
-CONFIG_NET_SHELL=y
-CONFIG_SHELL=y
+CONFIG_NET_SHELL=n
+CONFIG_SHELL=n
 
 # Network application options and configuration
 CONFIG_NET_CONFIG_SETTINGS=y
@@ -100,34 +93,7 @@ CONFIG_POSIX_MAX_FDS=12
 
 ###############################################################################
 
-# Enable Mbed TLS configuration
-CONFIG_MBEDTLS=y
-CONFIG_MBEDTLS_BUILTIN=y
-CONFIG_MBEDTLS_ENABLE_HEAP=y
-CONFIG_MBEDTLS_HEAP_SIZE=65536
-CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=10240
-CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
-CONFIG_MBEDTLS_USER_CONFIG_ENABLE=y
-CONFIG_MBEDTLS_USER_CONFIG_FILE="user-tls.conf"
-
-CONFIG_MBEDTLS_TLS_VERSION_1_2=y
-CONFIG_MBEDTLS_TLS_VERSION_1_1=n
-CONFIG_MBEDTLS_TLS_VERSION_1_0=n
-
-# enable CONFIG_NET_SOCKETS_LOG_LEVEL_DBG in order to see mbedtls logs
-CONFIG_MBEDTLS_DEBUG=y
-CONFIG_MBEDTLS_DEBUG_LEVEL=1
-CONFIG_MBEDTLS_MEMORY_DEBUG=y
-
-###############################################################################
-
 CONFIG_SNTP=y
-
-###############################################################################
-
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_LIB_TLS=y
-CONFIG_MQTT_KEEPALIVE=20
 
 ###############################################################################
 
@@ -137,3 +103,8 @@ CONFIG_EVENTFD_MAX=1
 ###############################################################################
 
 CONFIG_JSON_LIBRARY=y
+
+###############################################################################
+
+CONFIG_HTTP_CLIENT=y
+CONFIG_HTTP_PARSER=y
