--- a/prj.conf
+++ b/prj.conf
@@ -5,4 +5,7 @@ CONFIG_LOG=y
 
 CONFIG_POLL=y
 
-# CONFIG_ASSERT=y
+CONFIG_ASSERT=y
+
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=2048
