--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,8 @@
         "stdlib.h": "c",
         "*.cer": "c",
         "errno.h": "c",
-        "sntp.h": "c"
+        "sntp.h": "c",
+        "net_if.h": "c",
+        "certs.h": "c"
     }
 }
