--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     // qemu-system-i386
     "configurations": [
         {
-            "name": "(gdb) QEMU",
+            "name": "(gdb) QEMU x86",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/zephyr/zephyr.elf",
