Zephyr linked library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(zephyr_qemi_networking_demo)
 set(SIMPLELIB_PATH "${PROJECT_SOURCE_DIR}/lib/simplelib")
 add_subdirectory(${SIMPLELIB_PATH})
 zephyr_include_directories(lib/simplelib/include)
+target_link_libraries(simplelib INTERFACE kernel)
 
 # application
 file(GLOB_RECURSE app_sources src/*.c*)
@@ -17,5 +18,6 @@ target_sources(app PRIVATE ${app_sources})
 zephyr_include_directories(src)
 zephyr_include_directories(src/tls_config)
 
-# link external library to application
-zephyr_link_libraries(simplelib)
+# link external library to application (as private to prevent cyclic dependency)
+#   see : https://github.com/zephyrproject-rtos/zephyr/issues/31613#issuecomment-768156889
+target_link_libraries(app PRIVATE simplelib)
