Demo with both types of library - external library - external library calling zephyr functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
         "sntp.h": "c",
         "net_if.h": "c",
         "certs.h": "c",
-        "utils.h": "c"
+        "utils.h": "c",
+        "slib.h": "c",
+        "zlib.h": "c"
     }
 }
