--- a/prj.conf
+++ b/prj.conf
@@ -1,15 +1,27 @@
 
 CONFIG_PRINTK=y
 
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+
 ###############################################################################
 
 CONFIG_QEMU_ICOUNT=n
 
 ###############################################################################
 
-# CONFIG_NEWLIB_LIBC=y
-# CONFIG_NEWLIB_LIBC_MIN_REQUIRED_HEAP_SIZE=2048
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_NEWLIB_LIBC_FLOAT_SCANF=y
+CONFIG_NEWLIB_LIBC_ALIGNED_HEAP_SIZE=4096
 
-CONFIG_MINIMAL_LIBC=y
-CONFIG_MINIMAL_LIBC_MALLOC=y
-CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=2048
+
+CONFIG_MAIN_STACK_SIZE=4096
+
+CONFIG_ASSERT=y
+
+CONFIG_DEBUG=y
+
+###############################################################################
+
+CONFIG_LUA=y
