--- a/prj.conf
+++ b/prj.conf
@@ -3,6 +3,10 @@ CONFIG_PRINTK=y
 
 CONFIG_LOG=y
 CONFIG_LOG_MODE_IMMEDIATE=y
+# CONFIG_LOG_MODE_MINIMAL=y
+
+CONFIG_DEBUG=y
+CONFIG_ASSERT=y
 
 ###############################################################################
 
@@ -13,14 +17,22 @@ CONFIG_QEMU_ICOUNT=n
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_NEWLIB_LIBC_FLOAT_SCANF=y
+
+# what is the purpose of this ?
 CONFIG_NEWLIB_LIBC_ALIGNED_HEAP_SIZE=4096
 
+###############################################################################
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
+###############################################################################
 
 CONFIG_MAIN_STACK_SIZE=4096
-
-CONFIG_ASSERT=y
-
-CONFIG_DEBUG=y
 
 ###############################################################################
 
