Add add a filesystem and load LUA scripts from there.
- Tested with simple scripts and the "official" math.lua script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
         "string.h": "c",
         "device.h": "c",
         "lauxlib.h": "c",
-        "littlefs.h": "c"
+        "littlefs.h": "c",
+        "typeinfo": "c",
+        "cstdio": "c"
     }
 }
