--- a/prj.conf
+++ b/prj.conf
@@ -14,6 +14,9 @@ CONFIG_QEMU_ICOUNT=n
 
 ###############################################################################
 
+# Required in order to have the "_open" function defined
+CONFIG_POSIX_API=y
+
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_NEWLIB_LIBC_FLOAT_SCANF=y
@@ -32,7 +35,7 @@ CONFIG_FILE_SYSTEM_LITTLEFS=y
 
 ###############################################################################
 
-CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=8096
 
 ###############################################################################
 
