Make it work with zephyr version 2.7.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "lauxlib.h": "c",
         "littlefs.h": "c",
         "typeinfo": "c",
-        "cstdio": "c"
+        "cstdio": "c",
+        "fs.h": "c"
     }
 }
