Add script to call another LUA script stored in the FS

--- a/prj.conf
+++ b/prj.conf
@@ -21,8 +21,11 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_NEWLIB_LIBC_FLOAT_SCANF=y
 
-# what is the purpose of this ?
-CONFIG_NEWLIB_LIBC_ALIGNED_HEAP_SIZE=4096
+# NEWLIBC
+# In case of MMU
+CONFIG_NEWLIB_LIBC_ALIGNED_HEAP_SIZE=1048576
+# No MMU
+CONFIG_NEWLIB_LIBC_MIN_REQUIRED_HEAP_SIZE=1048576
 
 ###############################################################################
 
@@ -40,3 +43,7 @@ CONFIG_MAIN_STACK_SIZE=8096
 ###############################################################################
 
 CONFIG_LUA=y
+
+###############################################################################
+
+CONFIG_SHELL=y
