--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_SOURCE_DIR}/modules/lua)
+set(DTC_OVERLAY_FILE "qemu_x86.overlay")
 
 find_package(Zephyr)
 project(zephyr_qemu_lua_demo)
