--- a/prj.conf
+++ b/prj.conf
@@ -34,6 +34,14 @@ CONFIG_FLASH_MAP=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 
 CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_SHELL=y
+
+CONFIG_DISK_ACCESS=y
+CONFIG_DISK_RAM_VOLUME_SIZE=256
+CONFIG_DISK_RAM_VOLUME_NAME="RAM"
+CONFIG_DISK_DRIVER_RAM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+
 CONFIG_FILE_SYSTEM_LITTLEFS=y
 
 ###############################################################################
