Demo of sys_mem_blocks_alloc

--- a/prj.conf
+++ b/prj.conf
@@ -13,3 +13,5 @@ CONFIG_QEMU_ICOUNT=n
 CONFIG_MINIMAL_LIBC=y
 CONFIG_MINIMAL_LIBC_MALLOC=y
 CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=2048
+
+CONFIG_SYS_MEM_BLOCKS=y
